--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,10 @@ import Hero from '../components/Hero.astro'
 ---
 
 <Layout>
-	<main class="flex justify-center">
+	<main class="flex flex-col items-center">
 		<Hero />
+		<section class="flex">
+			<h1 class="text-left">Experience</h1>
+		</section>
 	</main>
 </Layout>
