--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,11 +5,11 @@ import ResumeIcon from "../icons/ResumeIcon.astro"
 import SocialButton from "./SocialButton.astro"
 ---
 
-<section class="py-12 lg:py-32 max-w-5xl opacity-85 px-8 flex flex-wrap justify-center sm:flex-nowrap gap-x-10">
+<section class="py-12 lg:py-32 opacity-85 flex flex-wrap justify-center sm:flex-nowrap gap-x-10">
     <img class="rounded-full w-36 h-36 mb-12" src="/avatar.png" alt="Gerard Doncel">
     <aside>
         <h1 class="text-5xl font-bold opacity-90">Hi, I'm Gerard Doncel</h1>
-        <p class="my-4">Computer Engenieer, +1 years of PHP experience. Barcelona, Spain ES. Always exploring new tech stacks to build cool stuff.</p> 
+        <p class="my-4 text-xl">Computer Engenieer, +1 years of PHP experience. Barcelona, Spain ES. Always exploring new tech stacks to build cool stuff.</p> 
         <div class="flex flex-wrap sm:flex-nowrap gap-x-1">
             <SocialButton href="https://www.linkedin.com/in/gerard-doncel-gutierrez/" label="LinkedIn">
                 <LinkedInIcon class="w-5 h-5" color="#fff"/>
