--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,6 +11,7 @@ import '@fontsource-variable/onest';
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+                <meta name="theme-color" content="#161616">
 		<title>Gerard Doncel - Full Stack Developer</title>
 	</head>
 	<body class="my-0 mx-auto text-white">
