--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,10 @@
-<header class="my-0 mx-auto opacity-90 max-w-[1024px]">
-    <nav class="flex justify-center items-center gap-x-7 py-6">
-        <a href="#experience">Experience</a>
-        <a href="#projects">Projects</a>
-        <a href="#aboutme">About Me</a>
+<header class="flex justify-between items-center py-5 mx-auto max-w-5xl px-6">
+    <div>
+        <img class="rounded-full w-11 h-11 opacity-70" src="/avatar.png" alt="Gerard Doncel">
+    </div>
+    <nav class="flex justify-center items-center gap-x-7">
+        <a class="opacity-70 duration-200 transform hover:text-yellow-500 hover:scale-105 hover:opacity-100 hover:font-semibold" href="#experience">Experience</a>
+        <a class="opacity-70 duration-200 transform hover:text-yellow-500 hover:scale-105 hover:opacity-100 hover:font-semibold" href="#projects">Projects</a>
+        <a class="opacity-70 duration-200 transform hover:text-yellow-500 hover:scale-105 hover:opacity-100 hover:font-semibold" href="#aboutme">About Me</a>
     </nav>
 </header>
