--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,8 +17,8 @@ import '@fontsource-variable/onest';
 	<body class="my-0 mx-auto text-white">
 		<!-- Gradient Background -->
 		<div class="fixed h-full w-full bg-slate-950">
-			<div class="absolute bottom-0 left-[-20%] right-0 top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(124,58,237,.15),rgba(255,255,255,0))]"></div>
-			<div class="absolute bottom-0 right-[-20%] top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(124,58,237,.15),rgba(255,255,255,0))]"></div>
+			<div class="absolute bottom-0 left-[-15%] right-0 top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(124,58,237,.15),rgba(255,255,255,0))]"></div>
+			<div class="absolute bottom-0 right-[-15%] top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(124,58,237,.15),rgba(255,255,255,0))]"></div>
 		</div>
 		<Header />
 		<slot />
@@ -26,6 +26,10 @@ import '@fontsource-variable/onest';
 </html>
 
 <style is:global>
+	*, *::before, *::after {
+  		box-sizing: border-box;
+	}
+
 	html {
 		font-family: 'Onest Variable', sans-serif;
 	}
