--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,6 +32,7 @@ import '@fontsource-variable/onest';
 
 	html {
 		font-family: 'Onest Variable', sans-serif;
+		scroll-behavior: smooth;
 	}
 
 	::selection {
