--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,30 +1,39 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro'
-import ExperienceIcon from '../icons/ExperienceIcon.astro';
+import LinkedInIcon from '../icons/LinkedInIcon.astro';
 ---
 
 <Layout>
 	<main class="mx-auto flex flex-col items-center max-w-5xl px-6 h-full">
 		<Hero />
-		<section class="relative">
-			<h2 class="opacity-80 font-semibold text-4xl mb-12 text-left md:text-center">Experience</h2>
-			<div>
-				<div class="absolute ml-6 md:ml-0 left-0 md:left-1/2 w-[3px] bg-yellow-500 transform -translate-x-1/2 h-full"></div>
-				<div class="relative w-full mb-6">
-					<div class="absolute bg-yellow-500 w-4 h-4 rounded-full top-0 left-0 md:left-1/2 transform -translate-x-1/2"></div>
-					<div class="relative ml-6 md:ml-0 md:w-[45%] md:text-right">
-						<h3>3&Punt</h3>
-						<span>Full Stack Developer</span>
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id tempora, molestias quae, est consequuntur quas dolore ducimus totam nulla vero illum voluptatum nemo ipsa! Beatae possimus ipsum blanditiis a cum.</p>	
+		<section class="mb-12">
+			<h2 id="experience" class="opacity-80 font-semibold text-4xl mb-8 text-left md:text-center">Experience</h2>
+			<div class="relative h-full">
+				<div class="absolute ml-1 md:ml-0 left-0 top-4 md:left-1/2 w-[3px] bg-yellow-500 transform -translate-x-1/2 h-full"></div>
+				<div class="relative w-full pb-6">
+					<div class="absolute ml-1 md:ml-0 bg-yellow-500 w-4 h-4 rounded-full top-4 left-0 md:left-1/2 transform -translate-x-1/2"></div>
+					<div class="relative ml-6 md:ml-0 md:w-[47.5%] md:text-right bg-black/20 px-4 py-3 md:border-l-indigo-500 md:border-l-[2px] md:border-r-0 border-l-0 border-r-indigo-500 border-r-[2px]">
+						<span class="block mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Jan 2023 - Present</span>
+						<span class="text-lg font-semibold mb-1">Full Stack Developer</span>
+						<h3 class="text-base font-normal mb-1 text-gray-400">3&Punt</h3>
+						<p class="text-sm">
+							Developing quality Moodle plugins and integrations.
+							Utilizing technologies to enhance the Moodle e-learning experience. 
+							Collaborating with clients, I analyze requirements to craft optimal solutions and ensure smooth integration.
+						</p>	
 					</div>
 				</div>
-				<div class="relative w-full mb-6">
-					<div class="absolute bg-yellow-500 w-4 h-4 rounded-full top-0 left-0 md:left-1/2 transform -translate-x-1/2"></div>
-					<div class="relative ml-6 md:ml-0 md:left-[55%] md:w-[45%]">
-						<h3>Namastech</h3>
-						<span>Full Stack Developer</span>
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id tempora, molestias quae, est consequuntur quas dolore ducimus totam nulla vero illum voluptatum nemo ipsa! Beatae possimus ipsum blanditiis a cum.</p>	
+				<div class="relative w-full pb-4">
+					<div class="absolute ml-1 md:ml-0 bg-yellow-500 w-4 h-4 rounded-full top-4 left-0 md:left-1/2 transform -translate-x-1/2"></div>
+					<div class="relative ml-6 md:ml-0 md:left-[52.5%] md:w-[47.5%] bg-black/20 px-4 py-3 border-r-indigo-500 border-r-[2px]">
+						<span class="block mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Apr 2022 - Sep 2022</span>
+						<span class="text-lg font-semibold mb-1">Web Developer</span>
+						<h3 class="text-base font-normal mb-1 text-gray-400">Namastech</h3>
+						<p class="text-sm">
+							Fixing general bugs of their web application. (4DMOVIN)
+                            Development of small tools to imporve web utility.
+						</p>	
 					</div>
 				</div>
 			</div>
