--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header class="sticky top-0">
+<header class="sticky top-0 bg-black/0 backdrop-blur-2xl z-10">
     <!-- bg-black/30 backdrop-blur-lg z-10 -->
     <div class="flex justify-between items-center py-5 mx-auto max-w-5xl px-6">
         <div>
@@ -9,6 +9,5 @@
             <a class="opacity-70 duration-200 transform hover:text-yellow-500 hover:scale-105 hover:opacity-100 hover:font-semibold" href="#projects">Projects</a>
             <a class="opacity-70 duration-200 transform hover:text-yellow-500 hover:scale-105 hover:opacity-100 hover:font-semibold" href="#aboutme">About Me</a>
         </nav>
-    
     </div>
 </header>
