--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,7 @@ import '@fontsource-variable/onest';
 	html {
 		font-family: 'Onest Variable', sans-serif;
 		scroll-behavior: smooth;
+		background-color: rgb(2, 6, 23, 1);
 	}
 
 	::selection {
