--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,9 @@ import LinkedInIcon from '../icons/LinkedInIcon.astro';
 			<LinkedInIcon class="w-5 h-5" color="#fff"/>
 			<h2 id="experience" class="opacity-80 font-semibold text-4xl mb-8 text-left md:text-center">Experience</h2>
 			<div class="relative h-full">
-				<div class="absolute ml-1 md:ml-0 left-0 top-4 md:left-1/2 w-[3px] bg-yellow-500 transform -translate-x-1/2 h-full"></div>
+				<div class="absolute ml-2 md:ml-0 left-0 top-4 md:left-1/2 w-[3px] bg-yellow-500 transform -translate-x-1/2 h-full"></div>
 				<div class="relative w-full pb-6">
-					<div class="absolute ml-1 md:ml-0 bg-yellow-500 w-4 h-4 rounded-full top-4 left-0 md:left-1/2 transform -translate-x-1/2"></div>
+					<div class="absolute ml-2 md:ml-0 bg-yellow-500 w-3 h-3 rounded-full top-4 left-0 md:left-1/2 transform -translate-x-1/2"></div>
 					<div class="relative ml-6 md:ml-0 md:w-[47.5%] md:text-right bg-black/20 px-4 py-3 md:border-l-violet-500/50 md:border-l-[1px] md:border-r-0 border-l-0 border-r-violet-500/50 border-r-[1px]">
 						<span class="block mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Jan 2023 - Present</span>
 						<span class="text-lg font-semibold mb-1">Full Stack Developer</span>
@@ -25,15 +25,16 @@ import LinkedInIcon from '../icons/LinkedInIcon.astro';
 						</p>	
 					</div>
 				</div>
-				<div class="relative w-full pb-4">
-					<div class="absolute ml-1 md:ml-0 bg-yellow-500 w-4 h-4 rounded-full top-4 left-0 md:left-1/2 transform -translate-x-1/2"></div>
+				<div class="relative w-full pb-2">
+					<div class="absolute ml-2 md:ml-0 bg-yellow-500 w-3 h-3 rounded-full top-4 left-0 md:left-1/2 transform -translate-x-1/2"></div>
 					<div class="relative ml-6 md:ml-0 md:left-[52.5%] md:w-[47.5%] bg-black/20 px-4 py-3 border-r-violet-500/50 border-r-[1px]">
-						<span class="block mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Apr 2022 - Sep 2022</span>
+						<span class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Apr 2022 - Sep 2022</span>
 						<span class="text-lg font-semibold mb-1">Web Developer</span>
 						<h3 class="text-base font-normal mb-1 text-gray-400">Namastech</h3>
 						<p class="text-sm">
 							Fixing general bugs of their web application. (4DMOVIN)
-                            Development of small tools to imporve web utility.
+                            Development of small tools to imporve web utility. Building
+							WordPress sites, including landing pages, working with woo-commerce.
 						</p>	
 					</div>
 				</div>
