--- a/src/components/SocialButton.astro
+++ b/src/components/SocialButton.astro
@@ -1,4 +1,13 @@
+---
+interface Props {
+    href: string,
+    label: String
+}
+
+const {href, label} = Astro.props;
+---
+
 <div class="duration-100 ease-in-out transform hover:scale-105 hover:bg-slate-600/20 flex gap-x-2 cursor-pointer focus:outline-none font-medium rounded-xl text-sm px-4 py-2.5 me-2 mb-2 border-[1px] border-slate-500/20">
     <slot />
-    <a target="_blank" href={Astro.props.href}>{Astro.props.label}</a>
+    <a target="_blank" href={href}>{label}</a>
 </div>
