--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,27 @@
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro'
 import Experience from '../components/Experience.astro';
+import ExperienceCard from '../components/ExperienceCard.astro';
 ---
 
 <Layout>
 	<main class="mx-auto flex flex-col items-center max-w-5xl px-6 h-full">
 		<Hero />
-		<Experience />
+		<Experience>
+			<ExperienceCard 
+				date="Jan 2023 - Present"
+				position="Full Stack Developer"
+				company="3&Punt"
+				description="Developing quality Moodle plugins and integrations. Utilizing technologies to enhance the Moodle e-learning experience. Collaborating with clients, I analyze requirements to craft optimal solutions and ensure smooth integration."
+				side="left"
+        	/> 
+        	<ExperienceCard 
+				date="Apr 2022 - Sep 2022"
+				position="Web Developer"
+				company="Namastech"
+				description="Fixing general bugs of their web application. (4DMOVIN) Development of small tools to imporve web utility. Building WordPress sites, including landing pages, working with woo-commerce."
+				side="right"
+        	/>
+		</Experience>
 	</main>
 </Layout>
