--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,11 +1,7 @@
----
-import ExperienceCard from "./ExperienceCard.astro";
----
-
-<section class="mb-12">
-    <h2 id="experience" class="opacity-80 font-semibold text-4xl mb-8 text-left md:text-center">Experience</h2>
+<section class="mb-16">
+    <h2 id="experience" class="opacity-85 font-medium text-2xl text-left md:text-center mb-8">E X P E R I E N C E</h2>    
     <div class="relative h-full">
-        <div class="absolute ml-2 md:ml-0 left-0 top-4 md:left-1/2 w-[3px] bg-yellow-500 transform -translate-x-1/2 h-full"></div>
+        <div class="absolute ml-2 md:ml-0 left-0 top-4 md:left-1/2 w-[2px] bg-yellow-500 transform -translate-x-1/2 h-full"></div>
         <slot >
     </div>
 </section>
