--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,11 +25,11 @@ import SqlSVG from '../assets/sql.svg';
 				description="Developing quality Moodle plugins and integrations. Utilizing technologies to enhance the Moodle e-learning experience. Collaborating with clients, I analyze requirements to craft optimal solutions and ensure smooth integration."
 				side="left"> 
 				<div class="flex flex-wrap justify-start md:justify-end">
-					<SkillPill width=4 color='indigo' source={PhpSVG.src} skill="PHP" />
-					<SkillPill width=4 color='yellow' source={JavaScriptSVG.src} skill="JavaScript" />
-					<SkillPill width=3 color='orange' source={HtmlSVG.src} skill="HTML" />
-					<SkillPill width=3 color='sky' source={CssSVG.src} skill="CSS" />
-					<SkillPill width=4 color='slate' source={SqlSVG.src} skill="MySQL" />
+					<SkillPill width=4 height='4' color='indigo' source={PhpSVG.src} skill="PHP" />
+					<SkillPill width=4 height='4' color='yellow' source={JavaScriptSVG.src} skill="JavaScript" />
+					<SkillPill width=3 height='4' color='orange' source={HtmlSVG.src} skill="HTML" />
+					<SkillPill width=3 height='4' color='sky' source={CssSVG.src} skill="CSS" />
+					<SkillPill width=4 height='4' color='slate' source={SqlSVG.src} skill="MySQL" />
 				</div>
 			</ExperienceCard>
         	<ExperienceCard 
@@ -39,13 +39,13 @@ import SqlSVG from '../assets/sql.svg';
 				description="Fixing general bugs of their web application. (4DMOVIN) Development of small tools to imporve web utility. Building WordPress sites, including landing pages, working with woo-commerce."
 				side="right">
 				<div class="flex flex-wrap justify-start">
-					<SkillPill width=4 color='indigo' source={PhpSVG.src} skill="PHP" />
-					<SkillPill width=5 color='red' source={AngularSVG.src} skill="Angular" />
-					<SkillPill width=4 color='blue' source={TypeScriptSVG.src} skill="TypeScript" />
-					<SkillPill width=3 color='orange' source={HtmlSVG.src} skill="HTML" />
-					<SkillPill width=3 color='sky' source={CssSVG.src} skill="CSS" />
-					<SkillPill width=4 color='cyan' source={WordPressSVG.src} skill="Wordpress" />
-					<SkillPill width=4 color='slate' source={SqlSVG.src} skill="MySQL" />
+					<SkillPill width=4 height='4' color='indigo' source={PhpSVG.src} skill="PHP" />
+					<SkillPill width=5 height='5' color='red' source={AngularSVG.src} skill="Angular" />
+					<SkillPill width=4 height='4' color='blue' source={TypeScriptSVG.src} skill="TypeScript" />
+					<SkillPill width=3 height='4' color='orange' source={HtmlSVG.src} skill="HTML" />
+					<SkillPill width=3 height='4' color='sky' source={CssSVG.src} skill="CSS" />
+					<SkillPill width=4 height='4' color='cyan' source={WordPressSVG.src} skill="Wordpress" />
+					<SkillPill width=4 height='4' color='slate' source={SqlSVG.src} skill="MySQL" />
 				</div>
 			</ExperienceCard>
 		</Experience>
