--- a/src/components/SkillPill.astro
+++ b/src/components/SkillPill.astro
@@ -7,10 +7,10 @@ interface Props {
     skill: string
 }
 
-const { width, color, source, skill } = Astro.props;
+const { width, height , color, source, skill } = Astro.props;
 ---
 
-<div class=`bg-${color}-500/30 flex items-center gap-x-2 focus:outline-none font-medium rounded-2xl text-sm px-2 py-1 me-2 mb-2 border-[1px] border-slate-500/20`>
+<div class=`${color} flex items-center gap-x-2 focus:outline-none font-medium rounded-2xl text-sm px-2 py-1 me-2 mb-2 border-[1px] border-slate-500/20`>
     <img class=`w-${width} h-${height}` src={source}/>
     <span>{skill}</span>
 </div>
