small fixes, name hidden small screens

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ import SqlSVG from '../assets/sql.svg';
 				</div>
 			</ExperienceCard>
 		</Experience>
-		<h2 id="projects" class="opacity-85 font-medium text-2xl text-left md:text-center mb-8">P R O J E C T S</h2>    
+		<h2 id="projects" class="opacity-85 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">PROJECTS</h2>    
 		
 	</main>
 </Layout>
