--- a/src/components/SkillPill.astro
+++ b/src/components/SkillPill.astro
@@ -1,16 +1,13 @@
 ---
 interface Props {
-    width: string,
-    height: string,
     color: string,
-    source: string,
     skill: string
 }
 
-const { width, height , color, source, skill } = Astro.props;
+const { color, skill } = Astro.props;
 ---
 
 <div class=`${color} flex items-center gap-x-2 focus:outline-none font-medium rounded-2xl text-sm px-2 py-1 me-2 mb-2 border-[1px] border-slate-500/20`>
-    <img class={`w-${width} h-${height}`} src={source}/>
+    <slot />
     <span>{skill}</span>
 </div>
