--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,7 +9,7 @@ import Button from "./Button.astro"
     <section>
         <span class="text-4xl font-bold opacity-90 mb-1 block">Hi, I'm</span>
         <h1 class="text-8xl font-bold bg-gradient-to-r from-violet-500 to-violet-800 inline-block text-transparent bg-clip-text mb-4">Gerard Doncel</h1>
-        <p class="text-lg sm:text-xl mb-5">Computer Engenieer, <span class="text-yellow-500 font-semibold">+2 years of PHP experience. </span>Barcelona, Spain 🇪🇸. Always exploring new tech stacks to build cool stuff.</p> 
+        <p class="text-lg sm:text-xl mb-5">Computer Engineer, <span class="text-yellow-500 font-semibold">+2 years of PHP experience. </span>Barcelona, Spain 🇪🇸. Always exploring new tech stacks to build cool stuff.</p> 
         <div class="flex flex-wrap sm:flex-nowrap gap-x-1">
             <Button href="https://www.linkedin.com/in/gerard-doncel-gutierrez/" label="LinkedIn">
                 <LinkedInIcon class="w-4 h-4" color="#FFF"/>
