--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import SqlIcon from '../icons/SQLIcon.astro';
 
 // Images
 import PokedexImage from '../assets/img/pokedex-project.png'
-import NetlifyIcon from '../icons/NetlifyIcon.astro';
+import ViteIcon from '../icons/ViteIcon.astro';
 import ReactIcon from '../icons/ReactIcon.astro';
 import Button from '../components/Button.astro';
 import PreviewIcon from '../icons/PreviewIcon.astro';
@@ -96,8 +96,8 @@ import AboutMe from '../components/AboutMe.astro';
 					<SkillPill color='bg-yellow-500/30' skill="JavaScript" >
 						<JavaScriptIcon class="w-4 h-4"/>
 					</SkillPill>
-					<SkillPill color='bg-emerald-500/30' skill="Netlify" >
-						<NetlifyIcon class="w-4 h-4" />
+					<SkillPill color='bg-pink-500/30' skill="Vite" >
+						<ViteIcon class="w-4 h-4" />
 					</SkillPill>	
 				</div>
 				<div slot="buttons" class="flex flex-wrap sm:flex-nowrap gap-x-1">
