--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,3 +1,25 @@
-<section>
-    <h2 id="aboutme" class="opacity-85 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">ABOUT ME</h2>    
+<section class="mb-56">
+    <h2 id="aboutme" class="opacity-85 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">ABOUT ME</h2>
+
+    <div class="flex flex-wrap">
+        <div class="w-full md:w-1/2 text-base mb-2 text-gray-300 py-4">
+            <p class="mb-4">
+                Computer Engineer with more than <span class="text-yellow-500 font-semibold">2 years of experience using PHP</span>. Worked mainly with
+                HTML, CSS, JavaScript and SQL. Additionally, I have gained proficiency in Angular and TypeScript.
+            </p>
+        
+            <p class="mb-4">
+                My journey in technology began at the age of 15 when 
+                I acquired a Raspberry Pi and began experimenting with various projects, sparking a lifelong passion for technology.
+            </p>
+        
+            <p class="mb-4">
+                One of my significant accomplishments includes <span class="text-yellow-500 font-semibold">working with Spain's first Moodle Premium Partner</span>, where 
+                I developed crucial plugins for well-known clients in the e-learning industry.
+            </p>    
+        </div>
+        <div class="opacity-95 w-full md:w-1/2 py-4 flex justify-center items-center">
+            <img class="w-72 rounded-full" src="avatar.png">      
+        </div>
+    </div>
 </section>
