--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,7 +17,7 @@ import Button from "./Button.astro"
             <Button href="https://github.com/umigam3" label="GitHub">
                 <GitHubIcon class="w-5 h-5" color="#FFF"/>
             </Button>
-            <Button href="#" label="Resume">
+            <Button href="resume.pdf" label="Resume">
                 <ResumeIcon class="w-5 h-5" color="#FFF"/>
             </Button>
         </div>
