fixed select projects and about me

--- a/src/components/ExperienceCard.astro
+++ b/src/components/ExperienceCard.astro
@@ -4,7 +4,7 @@ interface Props {
     position: string,
     company: string,
     description: string,
-    side: string;
+    side: string
 }
 
 const { date, position, company, description, side } = Astro.props;
@@ -26,4 +26,3 @@ const { date, position, company, description, side } = Astro.props;
     </div>
     </div>
 </div>
-
