--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ import '@fontsource-variable/onest';
 	</head>
 	<body class="my-0 mx-auto text-white">
 		<!-- Gradient Background -->
-		<div class="fixed w-full h-dvh">
+		<div class="fixed w-full h-dvh -z-10">
 			<div class="absolute bottom-0 left-[-15%] right-0 top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(124,58,237,.15),rgba(255,255,255,0))]"></div>
 			<div class="absolute bottom-0 right-[-15%] top-[-10%] h-[500px] w-[500px] rounded-full bg-[radial-gradient(circle_farthest-side,rgba(124,58,237,.15),rgba(255,255,255,0))]"></div>
 		</div>
