about me improved

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -2,7 +2,7 @@
     <h2 id="aboutme" class="opacity-85 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">ABOUT ME</h2>
 
     <div class="flex flex-wrap">
-        <div class="w-full md:w-1/2 text-base mb-2 text-gray-300 py-4">
+        <div class="w-full md:w-2/3 text-base mb-2 text-gray-300 py-4 pr-8">
             <p class="mb-4">
                 Computer Engineer with more than <span class="text-yellow-500 font-semibold">2 years of experience using PHP</span>. Worked mainly with
                 HTML, CSS, JavaScript and SQL. Additionally, I have gained proficiency in Angular and TypeScript.
@@ -18,7 +18,7 @@
                 I developed crucial plugins for well-known clients in the e-learning industry.
             </p>    
         </div>
-        <div class="opacity-85 w-full md:w-1/2 py-4 flex justify-center items-center">
+        <div class="opacity-85 w-full md:w-1/3 py-4 flex justify-center items-center">
             <img class="w-72 rounded-full" src="avatar.png">      
         </div>
     </div>
