--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,11 +26,14 @@ import Button from '../components/Button.astro';
 import PreviewIcon from '../icons/PreviewIcon.astro';
 import SourceIcon from '../icons/SourceIcon.astro';
 import AboutMe from '../components/AboutMe.astro';
+import Carousel from '../components/Carousel.astro';
+import GitIcon from '../icons/GitIcon.astro';
 ---
 
 <Layout>
 	<main class="mx-auto flex flex-col max-w-5xl px-6 h-full">
 		<Hero />
+		<Carousel />
 		<Experience>
 			<ExperienceCard 
 				date="Jan 2023 - Present"
@@ -53,6 +56,9 @@ import AboutMe from '../components/AboutMe.astro';
 					</SkillPill>
 					<SkillPill color='bg-slate-500/30' skill="MySQL" >
 						<SqlIcon class="w-4 h-4"/>
+					</SkillPill>
+					<SkillPill color='bg-amber-500/30' skill="Git" >
+						<GitIcon class="w-4 h-4"/>
 					</SkillPill>
 				</div>
 			</ExperienceCard>
