--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -9,7 +9,7 @@ import GitIcon from '../icons/GitIcon.astro';
 ---
 
 <div class="w-full inline-flex flex-nowrap overflow-hidden mb-12 [mask-image:_linear-gradient(to_right,transparent_0,_black_128px,_black_calc(100%-200px),transparent_100%)]">
-    <ul class="flex items-center justify-center md:justify-start [&_li]:mx-8 animate-infinite-scroll">
+    <ul class="flex items-center justify-center md:justify-start [&_li]:mx-5 sm:[&_li]:mx-8 animate-infinite-scroll">
         <li>
             <PhpIconCarousel class="w-20 h-20"/>
         </li>
@@ -32,7 +32,7 @@ import GitIcon from '../icons/GitIcon.astro';
             <SqlIcon class="w-14 h-14"/>
         </li>
     </ul>
-    <ul class="flex items-center justify-center md:justify-start [&_li]:mx-8 animate-infinite-scroll" aria-hidden="true">
+    <ul class="flex items-center justify-center md:justify-start [&_li]:mx-5 sm:[&_li]:mx-8 animate-infinite-scroll" aria-hidden="true">
         <li>
             <PhpIconCarousel class="w-20 h-20"/>
         </li>
