--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -4,8 +4,11 @@ import JavaScriptIcon from '../icons/JavaScriptIcon.astro';
 import HtmlIcon from '../icons/HTMLIcon.astro';
 import CssIcon from '../icons/CSSIcon.astro';
 import SqlIcon from '../icons/SQLIcon.astro';
-import CppIcon from '../icons/CppIcon.astro';
 import GitIcon from '../icons/GitIcon.astro';
+import ReactIcon from '../icons/ReactIcon.astro';
+import TailwindIcon from '../icons/TailwindIcon.astro';
+import VisualStudio from '../icons/VisualStudio.astro';
+import PHPStormIcon from '../icons/PHPStormIcon.astro';
 ---
 
 <div class="w-full inline-flex flex-nowrap overflow-hidden mb-12 [mask-image:_linear-gradient(to_right,transparent_0,_black_128px,_black_calc(100%-200px),transparent_100%)]">
@@ -14,9 +17,6 @@ import GitIcon from '../icons/GitIcon.astro';
             <PhpIconCarousel class="w-20 h-20"/>
         </li>
         <li>
-            <CppIcon class="w-14 h-14"/>
-        </li>
-        <li>
             <HtmlIcon class="w-14 h-14"/>
         </li>
         <li>
@@ -26,10 +26,19 @@ import GitIcon from '../icons/GitIcon.astro';
             <JavaScriptIcon class="w-14 h-14"/>
         </li>
         <li>
+            <SqlIcon class="w-14 h-14"/>
+        </li>
+        <li>
             <GitIcon class="w-14 h-14"/>
         </li>
         <li>
-            <SqlIcon class="w-14 h-14"/>
+            <ReactIcon class="w-14 h-14"/>
+        </li>
+        <li>
+            <TailwindIcon class="w-14 h-14"/>
+        </li>
+        <li>
+            <VisualStudio class="w-14 h-14"/>
         </li>
     </ul>
     <ul class="flex items-center justify-center md:justify-start [&_li]:mx-5 sm:[&_li]:mx-8 animate-infinite-scroll" aria-hidden="true">
@@ -37,9 +46,6 @@ import GitIcon from '../icons/GitIcon.astro';
             <PhpIconCarousel class="w-20 h-20"/>
         </li>
         <li>
-            <CppIcon class="w-14 h-14"/>
-        </li>
-        <li>
             <HtmlIcon class="w-14 h-14"/>
         </li>
         <li>
@@ -49,10 +55,19 @@ import GitIcon from '../icons/GitIcon.astro';
             <JavaScriptIcon class="w-14 h-14"/>
         </li>
         <li>
+            <SqlIcon class="w-14 h-14"/>
+        </li>
+        <li>
             <GitIcon class="w-14 h-14"/>
         </li>
         <li>
-            <SqlIcon class="w-14 h-14"/>
+            <ReactIcon class="w-14 h-14"/>
+        </li>
+        <li>
+            <TailwindIcon class="w-14 h-14"/>
+        </li>
+        <li>
+            <VisualStudio class="w-14 h-14"/>
         </li>
     </ul>                             
 </div>
