--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,4 +1,4 @@
-<section class="mb-10">
-    <h2 id="projects" class="opacity-85 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">PROJECTS</h2>    
+<h2 id="projects" class="opacity-85 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">PROJECTS</h2>
+<section class="flex flex-wrap mb-10 justify-between">
     <slot />
 </section>
