--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -113,6 +113,27 @@ import GitIcon from '../icons/GitIcon.astro';
 					</Button>		
 				</div>
 			</ProjectCard>
+			<ProjectCard title='PokéDex App' source={PokedexImage.src} description="Simple Pokedex application built using React. It utilizes the PokeAPI to fetch and display information about Pokémon, providing features like displaying Pokémon, loading more Pokémon, searching, and more. Additionally, the app offers both dark and light modes for user preference.">
+				<div slot="skills" class="flex flex-wrap mb-2">
+					<SkillPill color='bg-blue-500/30' skill="React">
+						<ReactIcon class="w-4 h-4" />
+					</SkillPill>
+					<SkillPill color='bg-yellow-500/30' skill="JavaScript" >
+						<JavaScriptIcon class="w-4 h-4"/>
+					</SkillPill>
+					<SkillPill color='bg-pink-500/30' skill="Vite" >
+						<ViteIcon class="w-4 h-4" />
+					</SkillPill>	
+				</div>
+				<div slot="buttons" class="flex flex-wrap sm:flex-nowrap gap-x-1">
+					<Button href="https://github.com/umigam3/pokedex-api" label="Source Code">
+						<SourceIcon class="w-4 h-4"></SourceIcon>
+					</Button>
+					<Button href="https://pokeindex-app.netlify.app/" label="Preview">
+						<PreviewIcon class="w-4 h-4"></PreviewIcon>
+					</Button>		
+				</div>
+			</ProjectCard>
 		</Projects>
 		<AboutMe />
 	</main>
